# btrack-core

./: .gitignore  CMakeLists.txt  LICENSE  ReadMe.md
.github/workflows/: cmake-single-platform.yml
btrack-core/: CMakeLists.txt  CMakePresets.json  Variant.h  btrack-core.cpp  btrack-core.h  memory.h  memory_backend.h  type_traits.h
btrack-core/btrack-core/: CMakeLists.txt  btrack-core.cpp  btrack-core.h
btrack-core/btrack-core/nodes/: MemoryRegistry.h  MetaNode.cpp  MetaNode.h  MetaNodeIO.h  MetaNodeInput.h  MetaNodeInputArray.cpp  MetaNodeInputArray.h  MetaNodeInputValue.cpp  MetaNodeInputValue.h  MetaNodeOutput.h  MetaNodeOutputArray.cpp  MetaNodeOutputArray.h  MetaNodeOutputValue.cpp  MetaNodeOutputValue.h  Node.cpp  Node.h  NodeGraph.h  NodeIO.h  NodeInput.h  NodeInputArray.cpp  NodeInputArray.h  NodeInputValue.cpp  NodeInputValue.h  NodeOutput.h  NodeOutputArray.cpp  NodeOutputArray.h  NodeOutputValue.cpp  NodeOutputValue.h  nodes.h  type_traits.h
btrack-core/btrack-core/nodes/system/: Input.h  InputArray.cpp  InputArray.h  InputValue.cpp  InputValue.h  MemoryRegistry.h  MetaInput.h  MetaInputArray.cpp  MetaInputArray.h  MetaInputValue.cpp  MetaInputValue.h  MetaNode.cpp  MetaNode.h  MetaNodeIO.h  MetaOutput.h  MetaOutputArray.cpp  MetaOutputArray.h  MetaOutputValue.cpp  MetaOutputValue.h  Node.cpp  Node.h  NodeGraph.h  NodeIO.h  Output.h  OutputArray.cpp  OutputArray.h  OutputValue.cpp  OutputValue.h  nodes.h  shortcuts.h  type_traits.h
btrack-core/btrack-core/processing/: camera.h  wrapper.h
btrack-core/btrack-core/settings/: CamSettings.h  PTreeConvertible.h  SceneSettings.h  SettingsManager.cpp  SettingsManager.h  paths.h
btrack-core/nodes/: Graph.h  exceptions.h  metadata.h
btrack-core/nodes/runners/: NodeRunner.h  NodeRunnerProvider.h  ParallelRunnerProvider.cpp  ParallelRunnerProvider.h  RunnerStrategy.h  SeriesNodeRunnerProvider.h  SimpleNodeRunner.cpp  SimpleNodeRunner.h
btrack-core/nodes/system/: Clonable.h  Composite.cpp  Composite.h  GroupNode.h  Input.h  InputValue.h  Item.h  MemoryRegistry.h  MetaInput.h  MetaInputArray.h  MetaInputValue.h  MetaNode.h  MetaNodeIO.h  MetaOutput.h  MetaOutputArray.h  MetaOutputValue.h  MetaPassthrough.h  Node.h  NodeGraph.cpp  NodeGraph.h  NodeGroup.h  NodeIO.h  NodeObserver.h  NodeRegister.h  NodeTree.h  Output.h  OutputValue.h  ParallelNode.h  PassthroughPort.h  Port.h  SplitterNode.h  nodes.h  shortcuts.h  type_traits.h
btrack-core/nodes/utilities/: Graph.cpp  Graph.h
btrack-core/nodes/utilities/math/: Negate.h  UnaryOperation.h
btrack-core/processing/: camera.cpp  camera.h  scene.cpp  scene.h  wrapper.h
btrack-core/settings/: CamSettings.h  PTreeConvertible.h  SceneSettings.h  SettingsManager.cpp  SettingsManager.h  paths.h
btrack-core/tests/: CMakeLists.txt  cuda_tests.cpp  graph_tests.cpp  iterator_tests.cpp  node_runner_tests.cpp  node_tests.cpp  opencv_tests.cpp  registry_tests.cpp  settings_tests.cpp  test_nodes.h  wrapper_tests.cpp
scripts/: metadata_generator.py
